Resolved an issue with the overlay not covering the entire screen

--- a/src/components/countdown/CountDownOverlay.module.scss
+++ b/src/components/countdown/CountDownOverlay.module.scss
@@ -1,5 +1,5 @@
 .CountDown {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: 11;
@@ -18,7 +18,7 @@
     color: white;
 
     &[data-value='3'] {
-      color: #29cff5;
+      color: var(--tetromino-color-7);
     }
 
     &[data-value='2'] {
@@ -26,7 +26,7 @@
     }
 
     &[data-value='1'] {
-      color: #ff5f63;
+      color: var(--tetromino-color-3);
     }
 
     &:after {
